--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="col-md-12 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
 <div class="row justify-content-center mb-4">
 <div class="col-md-8 text-center">
-<h4><p class="lead mb-5">من می خواهم در رشته مهندسی کامپیوتر پس از یک وقفه نسبتا طولانی به تحصیل خود ادامه دهم چون قصد دارم مسیر زندگی ام را تغییر دهم. هدف من در زندگی اینست که برای خودم و دیگران مفید باشد و این امر برای من یک هدف مهم محسوب می شود. من قصد دارم با کسب مهارت های برنامه نویسی یک برنامه نویس موفق در حوزه وب و اپلیکیشن شوم.</p></h4>
+<h4><p class="lead mb-5">من می خواهم در رشته مهندسی کامپیوتر پس از یک وقفه نسبتا طولانی به تحصیل خود ادامه دهم چون قصد دارم مسیر زندگی ام را تغییر دهم. هدف من در زندگی اینست که برای خودم و دیگران مفید باشم و این امر برای من یک هدف مهم محسوب می شود. من قصد دارم با کسب مهارت های برنامه نویسی یک برنامه نویس موفق در حوزه وب و اپلیکیشن شوم.</p></h4>
 </div>
 </div>
 </div>
